# mandelbrot

./: README.md  pyproject.toml
mandelbrot/: fractal.py  main.py
mandelbrot/utils/: colors.py
